...
                                    <constraint firstAttribute="width" secondItem="mfp-H2-qY6" secondAttribute="height" id="f2q-YR-Jit"/>
                                    <constraint firstAttribute="trailing" secondItem="iij-kv-gg0" secondAttribute="trailing" id="qGZ-XF-VNO"/>
                                </constraints>
                            </view>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="E4M-11-cDB">
                                <rect key="frame" x="175" y="802" width="64" height="30"/>
                                <state key="normal" title="Relaunch"/>
                                <connections>
                                    <action selector="relaunchButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="aW6-zk-5H9"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
...
